--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "buildanalyze": "cross-env ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.2.4",
     "@types/node": "18.15.5",
-    "@types/react": "18.0.28",
+    "@types/react": "^18",
     "@types/react-dom": "18.0.11",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "lodash": "^4.17.21",
+    "next": "^13",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-virtualized": "^9.22.3",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/react-virtualized": "^9.21.21",
+    "cross-env": "^7.0.3",
+    "json-server": "^0.17.2"
   }
 }
